prepare for integration test with H2 db